--- a/src/app.css
+++ b/src/app.css
@@ -66,7 +66,7 @@ a {
 .header {
   -webkit-box-shadow: 0px 0px 10px #ddd;
           box-shadow: 0px 0px 10px #ddd;
-  padding-bottom: 10px;
+  padding: 10px 0px;
   position: sticky;
   top: 0px;
 }
@@ -90,9 +90,15 @@ a {
   height: 80px;
 }
 .header .container ul {
+  margin: 0%;
+  padding: 0%;
+  height: 40px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: 15px;
 }
 .header .container ul li a {
@@ -105,6 +111,78 @@ a {
   color: #fde4c3;
   -webkit-transition: 0.3s linear;
   transition: 0.3s linear;
+}
+.header .black {
+  position: relative;
+  z-index: 10000;
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
+  -webkit-transition: 0.3s linear;
+  transition: 0.3s linear;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: #302a18;
+  opacity: 0.6;
+  top: 0;
+}
+.header .black form {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 5px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.header .black form input {
+  width: 280px;
+  padding: 10px 0px;
+  border: none;
+  background-color: #302a18;
+  outline: none;
+  caret-color: white;
+  border-bottom: 1px solid white;
+  color: white;
+  font-size: 20px;
+}
+.header .black form input::-webkit-input-placeholder {
+  color: white;
+  font-size: 20px;
+}
+.header .black form input::-moz-placeholder {
+  color: white;
+  font-size: 20px;
+}
+.header .black form input:-ms-input-placeholder {
+  color: white;
+  font-size: 20px;
+}
+.header .black form input::-ms-input-placeholder {
+  color: white;
+  font-size: 20px;
+}
+.header .black form input::placeholder {
+  color: white;
+  font-size: 20px;
+}
+.header .black form i {
+  color: white;
+  font-size: 25px;
+  cursor: pointer;
+}
+.header .black i.fa-times {
+  color: white;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  font-size: 40px;
+  cursor: pointer;
 }
 
 @media (max-width: 950px) {
@@ -123,7 +201,7 @@ a {
         -ms-flex-direction: column;
             flex-direction: column;
     position: fixed;
-    top: 90px;
+    top: 100px;
     right: 0;
     height: calc(100vh - 90px);
     background-color: #302a18;
@@ -161,4 +239,8 @@ a {
     -webkit-transition: none !important;
     transition: none !important;
   }
+}
+.vertical {
+  -webkit-transform: translateY(0%) !important;
+          transform: translateY(0%) !important;
 }
