--- a/src/app.scss
+++ b/src/app.scss
@@ -78,7 +78,7 @@ a{
 
 .header{
     box-shadow: $box;
-    padding-bottom: 10px;
+    padding: 10px 0px;
     position: sticky;
     top: 0px;
     .container{
@@ -94,7 +94,11 @@ a{
             }
         }
         ul{
+          margin: 0%;
+          padding: 0%;
+          height: 40px;
             display: flex;
+            align-items: center;
             gap: 15px;
             li{
                 a{
@@ -110,6 +114,54 @@ a{
             }
         }
     }
+    .black{
+      position: relative;
+      z-index: 10000;
+      transform: translateY(-100%);
+      transition: $tra;
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      background-color:$main;
+      opacity: 0.6;
+      top: 0;
+      form{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        gap: 5px;
+        justify-content: center;
+        align-items: center;
+        input{
+          width: 280px;
+          padding: 10px 0px;
+          border: none;
+          background-color: $main;
+          outline: none;
+          caret-color: white;
+          border-bottom: 1px solid white;
+          color: white;
+          font-size: 20px;
+          &::placeholder{
+            color: white;
+            font-size: 20px;
+          }
+        }
+        i{
+          color: white;
+          font-size: 25px;
+          cursor: pointer;
+        }
+      }
+      i.fa-times{
+        color: white;
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        font-size: 40px;
+        cursor: pointer;
+      }
+    }
 }
 
 @media (max-width: 950px) {
@@ -124,7 +176,7 @@ a{
           padding: 0%;
           flex-direction: column;
           position: fixed;
-          top: 90px;
+          top: 100px;
           right: 0;
           height: calc(100vh - 90px);
           background-color: $main;
@@ -161,6 +213,10 @@ a{
     .trans {
       transition: none !important;
     }
+  }
+
+  .vertical{
+    transform: translateY(0%) !important;
   }
 
   // Header
